--- a/style/style.css
+++ b/style/style.css
@@ -2,173 +2,15 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow-x: hidden;
-    overflow-y: hidden;
 }
 body{
-    background-image: url('../datas/background.jpg');
-    background-size: 100%;
-    background-repeat: no-repeat;
-    width: 100vw;
-    height: 100vh;
-}
-header{
-    padding: 10px 15px;
-    height: 100px;
-    border-bottom: 1px solid #000;
-    box-shadow: 10px 3px 5px rgba(255, 255, 255, 0.5);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-header div{
-    height: 100%;
+    font-family: "Space Grotesk", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
 }
 #logo{
-    height: 100%;
-    border-radius: 50%;
+    font-family: "Gwendolyn", cursive;
+    font-weight: 700;
+    font-style: normal;
 }
-header nav{
-    width: 75%;
-}
-header nav ul{
-    list-style-type: none;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-.link{
-    padding: 8px 10px;
-    border: 2px solid #00FF41;
-    background-color: white;
-    border-radius: 40px;
-}
-.link a{
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 18px;
-    text-transform: uppercase;
-    display: block;
-}
-.link a:hover{
-    color: #00FF41;
-    transition: width 0.5 ease-in;
-    width: 100px;
-}
-.splash {
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    background-color: blue; /* Colore della goccia */
-    border-radius: 50%; /* Per rendere la forma circolare */
-    opacity: 0; /* Inizialmente nascosto */
-    transition: opacity 0.5s; /* Transizione per l'effetto di dissolvenza */
-  }
-#content{
-    /* position: relative;
-    z-index: 1;
-    width: 100%;
-    height: 100%; */
-}
-
-/* Stop Personal style started style for matrix */
-
-#matrix-container {
-    /* position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 0;
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-    background-color: #0D0208;
-    filter: blur(3px); */
-}
-.matrix-column {
-    position: absolute;
-    top: 0;
-    color: lime;
-    font-size: 13px;
-}
-
-
-#showed-text{
-    text-align: center;
-    text-transform: uppercase;
-    margin-top: 100px;
-}
-#heart{
-    text-align: center;
-}
-#heart i{
-    font-size: 750px;
-    position: absolute;
-    top: -60px;
-    left: 0;
-    right: 0;
-    background: radial-gradient(circle, #ff0000, #0000ff); /* Gradiente radiale */
-    -webkit-background-clip: text; /* Applicare il gradiente al testo */
-    -webkit-text-fill-color: transparent;
-}
-#any{
-    font-size: 13px;
-    background: rgb(255,0,0);
-    background: linear-gradient(90deg, rgba(255,0,0,1) 0%, rgba(254,255,0,1) 50%, rgba(5,255,0,1) 100%); /* Gradiente radiale */
-    -webkit-background-clip: text; /* Applicare il gradiente al testo */
-    -webkit-text-fill-color: transparent;
-    padding-top: 20px;
-    font-weight: bold;
-    text-transform: uppercase;
-    margin-left: 45px;
-    margin-top: 110px;
-}
-#phrase{
-    font-size: 13px;
-   background: rgb(255,0,0);
-    background: linear-gradient(90deg, rgba(255,0,0,1) 0%, rgba(254,255,0,1) 50%, rgba(5,255,0,1) 100%);
-    -webkit-background-clip: text; /* Applicare il gradiente al testo */
-    -webkit-text-fill-color: transparent;
-    padding-top: 20px;
-    font-weight: bold;
-    text-transform: uppercase;
-    margin-left: 45px;
-    margin-top: 5px;
-}
-#videoPlayer{
-    position: fixed;
-    padding: 20px;
-    top: -105px;
-    right: -85px;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -1; /* Assicura che il video sia dietro agli altri elementi */
-}
-#outlook{
-    padding: 8px 10px;
-    border-radius: 50px;
-    border: 2px solid #00FF41;
-    font-weight: bold;
-    text-transform: uppercase;
-}
-#outlook:hover{
-    border: 2px solid #ff0000;
-    color: white;
-    background-color: blueviolet;
-    cursor: pointer;
-
-}
-#div-out{
-    width: 100%;
-    margin: 250px auto;
-    text-align: center;
-}
-
-.link.splashing {
-    /* Aggiungi stili per l'effetto "splash" */
-    transition: width 1.5s ease;
-    width: 50%; /* Cambia il colore quando viene premuto */
-  }
