--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+::selection {
+    background-color: #0f0;
+    color: black;
+}
 body{
     font-family: "Space Grotesk", sans-serif;
     font-optical-sizing: auto;
@@ -21,7 +25,7 @@ header{
     font-style: normal;
 }
 #logo span{
-    vertical-align: 30px;
+    vertical-align: center;
     font-size: 30px;
 }
 #logo img{
@@ -30,8 +34,13 @@ header{
     border-radius: 50%;
 }
 .hidden {
-    display: none;
-}
+    opacity: 0;
+    pointer-events: none;
+}  
+.visible {
+    opacity: 1;
+    pointer-events: auto;
+}  
 #burger-icon {
     font-size: 30px;
     cursor: pointer;
@@ -46,37 +55,46 @@ header{
     position: absolute;
     top: 0px;
     right: 0;
-    background-color: #444;
+    left: 0;
     width: 200px;
     height: 100vh;
-    border: 1px solid #333;
-    z-index: -1;
-}
-#burger-list li:hover{
-    background-color: #555;
+    z-index: 1;
 }
 #burger-list li a:hover{
     color: #0f0;
+    transform: scale(1.3);
 }
+#burger-list, #main {
+    transition: opacity 0.5s ease-in-out;
+  }
 #burger-list li {
-    border-bottom: 1px solid #555;
     padding: 25px 12px;
 }
-
-#burger-list li:last-child {
-    border-bottom: none;
-}
-
 #burger-list a {
     display: block;
-    padding: 10px 20px;
-    color: white;
     text-decoration: none;
+    color: black;
+    font-size: 35px;
+    text-align: start;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 .fa-x{
     font-size: 30px;
     cursor: pointer;
+    position: relative;
+    right: 30px;
+    top: 0;
 }
 .fa-x:hover{
     color: #0f0;
+}
+
+.col-6 img{
+    width: 250px;
+    height: 250px;
+    margin: 50px 0;
+}
+.col-6 img:hover{
+    transform: scale(1.3);
 }
