--- a/style/style.css
+++ b/style/style.css
@@ -98,3 +98,28 @@ header{
 .col-6 img:hover{
     transform: scale(1.3);
 }
+
+/* about-keyframes */
+@keyframes typing {
+    from { width: 0; }
+    to { width: 20%; }
+}
+@keyframes blink-caret {
+    from, to { border-color: transparent; }
+    50% { border-color: black; }
+}
+  
+.typing-effect {
+    font-family: monospace;
+    border-right: 0.1em solid black;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 0;
+    display: inline-block;
+    animation: typing 5s steps(50, end), blink-caret 0.75s step-end infinite;
+}
+.description{
+    font-weight: bold;
+    font-size: 25px;
+    margin-top: 100px;
+}
