--- a/style/style.css
+++ b/style/style.css
@@ -91,9 +91,11 @@ header{
 }
 
 .col-6 img{
-    width: 250px;
+    width: 300px;
     height: 250px;
     margin: 50px 0;
+    border-radius: 30px;
+    box-shadow: 5px 5px #0f0;
 }
 .col-6 img:hover{
     transform: scale(1.3);
@@ -121,5 +123,5 @@ header{
 .description{
     font-weight: bold;
     font-size: 25px;
-    margin-top: 100px;
+    margin-top: 30px;
 }
